trunk/Archive2/25/dac8b8dedf4010/output
main.cpp:2:19: error: unknown type name 'X'; did you mean '::X'?
int fun(X x, X X, X y);
                  ^
                  ::X
main.cpp:1:13: note: '::X' declared here
typedef int X;
            ^
1 error generated.
